updated frontend, made it possible to add rooms and tenants to the database (mongodb)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=backend
-spring.data.mongodb.uri=mongodb+srv://roomEaseUser:FaJBNvDUAyuq5Yyp@roomease.bznzixe.mongodb.net/roomease?appName=RoomEase
+spring.data.mongodb.uri=mongodb+srv://roomEaseUser:FaJBNvDUAyuq5Yyp@roomease.bznzixe.mongodb.net/RoomEase?appName=RoomEase
